Closed Bug 459333 Opened 17 years ago Closed 17 years ago

Fix (leftover) regression from bug 199298

Categories

(MailNews Core :: Import, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: sgautherie, Assigned: sgautherie)

References

Details

(Keywords: regression)

Attachments

(1 file)

Bug 199298 comment 10 { From Serge Gautherie 2005-07-31 09:43:59 PDT (In reply to comment #7) > Created an attachment (id=164650) [edit] [details] > proposed fix |tPath| was removed, but the following line update was missed: {{ 617 MAPI_TRACE1( "~~ERROR~~ OpenStreamOnFile failed - temp path: %s\r\n", tPath); }} Can you fix this too ? }
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1b2pre) Gecko/20081009 SeaMonkey/2.0a2pre] (home, debug default) (W2Ksp4) (compiled, but not run: should be trivial enough)
Assignee: nobody → sgautherie.bz
Status: NEW → ASSIGNED
Attachment #342525 - Flags: superreview?(bienvenu)
Attachment #342525 - Flags: review?(bienvenu)
Comment on attachment 342525 [details] [diff] [review] (Av1) Make it compile with MAPI_DEBUG [Checkin: Comment 3] one nit - you don't need to cast string.get to a const char *; it already is one, isn't it?
Attachment #342525 - Flags: superreview?(bienvenu)
Attachment #342525 - Flags: superreview+
Attachment #342525 - Flags: review?(bienvenu)
Attachment #342525 - Flags: review+
Attachment #342525 - Attachment description: (Av1) Make it compile with MAPI_DEBUG → (Av1) Make it compile with MAPI_DEBUG [Checkin: Comment 3]
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: