Bug 459333 - Fix (leftover) regression from bug 199298; (Av1a) Make it compile with MAPI_DEBUG; r+sr=bienvenu